--- a/resume.css
+++ b/resume.css
@@ -1,12 +1,7 @@
 /*
 ---------------------------------------------------------------------------------
-	STRIPPED DOWN RESUME TEMPLATE
-    html resume
-
-    v0.9: 5/28/09
-
-    design and code by: thingsthatarebrown.com 
-                        (matt brown)
+	RESUME TEMPLATE
+	html resume
 ---------------------------------------------------------------------------------
 */
 
